# Caroline

./: .breakpoints  .env  .gitignore  .pylintrc  Procfile  README.md  TODO.md  TODO_zzllm_word_extraction.ipynb  caroline.py  config.json  groupby.ipynb  keep_alive.py  launch_dc_bat.vbs  main.py  prompt.txt  pyproject.toml  reqs.txt  requirements.txt  setup.bat  setup.py  setup_reqs.bat  setup_vscode.bat  start.bat  utils.py  zzllm_create_vocab_data.ipynb  zzzutils(check).py
cogs/: commands.py  develop_.py  korean.py  korean\kor_config.json  view.py  voice.py
cogs/ai_algo/: ai_algo.py  controller.py  main.py  stage_1_ai_evolution.py  stage_1_evolution.py  stage_2_ai_pathfinding.py  stage_2_pathfinding.py  stage_3_ai_forward_chain.py  stage_3_forward_chain.py  stage_4_view.py  view.py
cogs/edu/: FreeZ-lesson_1.json  FreeZ-lesson_3.json  FreeZ-lesson_4.json  FreeZ-school_1.json  FreeZ-school_13.json  FreeZ-school_16.json  FreeZ-school_18.json  FreeZ-school_2.json  FreeZ-school_24.json  FreeZ-school_3.json  FreeZ-school_30.json  FreeZ-school_4.json  FreeZ-school_5.json  FreeZ-school_6.json  FreeZ-school_7.json  FreeZ-school_9.json  drops_parser.py  knowledge.json  level_2.json  text_to_json_parser.py
cogs/korean/: constants.py  copied_scr_vocabulary.py  create_vocab.py  drops_parser.py  gsheet1_preprocess_freqtopi.py  gsheet1_vocab_rawtext_to_json.py  gsheet2_create_vocab.py  gsheet2_vocab_create.py  gsheet2_vocab_create_sheets.py  gsheet2_vocab_rawsheet+json_to_gsheet.py  gsheet3_add_freqs_multiple_meanings.py  gsheet3_vocab_add_freq_homonyms.py  gsheet_create_vocab.py  (+27 more)
(+483 files in other folders)
