[tool.poetry]
name = "repl_python3_Caroline-bot"
version = "0.1.0"
description = ""
authors = ["PeterMarkus <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
pytz = "^2022.1"
youtube_dl = "^2021.12.17"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
